fix(sermons): remove extra space

--- a/src/app/shared/sermons-list/sermons-list.component.scss
+++ b/src/app/shared/sermons-list/sermons-list.component.scss
@@ -219,6 +219,7 @@
 
         a {
           color: $gray;
+          margin-left: 0;
         }
       }
 
